deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goofys-injector
  namespace: daaas
  labels:
    apps.kubernetes.io/name: goofys-injector
spec:
  selector:
    matchLabels:
      apps.kubernetes.io/name: goofys-injector
  template:
    metadata:
      labels:
        apps.kubernetes.io/name: goofys-injector
      annotations:
        sidecar.istio.io/inject: 'false'
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/agent-configmap: "goofys-injector-vault-agent-config"
        vault.hashicorp.com/agent-pre-populate: "false"
    spec:
      serviceAccountName: goofys-injector
      imagePullSecrets:
        - name: k8scc01covidacr-registry-connection
      containers:
      - name: goofys-injector
        image: k8scc01covidacr.azurecr.io/goofys-injector:f4e13082ddd285ad0496a27230f2c360a4933ff4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: https
          containerPort: 8443
        volumeMounts:
        - name: certs
          mountPath: /certs
          readOnly: true
        - name: instances
          mountPath: /instances.json
          subPath: instances.json
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: goofys-injector-tls
      - name: instances
        configMap:
          name: minio-instances-goofys
---
apiVersion: v1
kind: Service
metadata:
  name: goofys-injector
  namespace: daaas
  labels:
    apps.kubernetes.io/name: goofys-injector
spec:
  selector:
    apps.kubernetes.io/name: goofys-injector
  ports:
  - name: https
    port: 443
    targetPort: 8443
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: daaas/goofys-injector
  labels:
    apps.kubernetes.io/name: goofys-injector
  name: goofys-injector
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: goofys-injector
      namespace: daaas
      path: /mutate
      port: 443
  failurePolicy: Ignore
  name: goofys-injector.statcan.gc.ca
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
