deploy/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blob-csi-injector
  namespace: daaas-system
  labels:
    apps.kubernetes.io/name: blob-csi-injector
spec:
  selector:
    matchLabels:
      apps.kubernetes.io/name: blob-csi-injector
  template:
    metadata:
      labels:
        apps.kubernetes.io/name: blob-csi-injector
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      serviceAccountName: blob-csi-injector
      automountServiceAccountToken: true
      containers:
      - name: blob-csi-injector
        image: k8scc01covidacr.azurecr.io/blob-csi-injector
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - name: https
          containerPort: 8443
        volumeMounts:
        - name: certs
          mountPath: /certs
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: blob-csi-injector-tls
---
apiVersion: v1
kind: Service
metadata:
  name: blob-csi-injector
  namespace: daaas-system
  labels:
    apps.kubernetes.io/name: blob-csi-injector
spec:
  selector:
    apps.kubernetes.io/name: blob-csi-injector
  ports:
  - name: https
    port: 443
    targetPort: 8443
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: daaas-system/blob-csi-injector
  labels:
    apps.kubernetes.io/name: blob-csi-injector
  name: blob-csi-injector
webhooks:
- admissionReviewVersions:
  - v1beta1
  sideEffects: None
  clientConfig:
    service:
      name: blob-csi-injector
      namespace: daaas-system
      path: /mutate
      port: 443
  failurePolicy: Ignore
  name: blob-csi-injector.statcan.gc.ca
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
